feat:
Updated project documentation